# dune-vem

./: CMakeLists.txt  README.md  Vem.m  dune-vem.pc.in  dune.module  pyproject.toml  setup.py
src/: CMakeLists.txt  dune-vem.cc  test-Pk.cc  test-dgspace.cc  test-dmatrix.cc  test-gmsh.cc  test-indexset.cc  test-leastsquares.cc  test-linvem.cc  test-reactiondiffusion.cc  test-reactiondiffusion2.cc
src/heat-test/: agglo-heat.cc  heatmodel.hh  heatscheme.hh  model.hh  vemelliptic.hh  vemscheme.hh
src/helmholtz-test/: dirichletconstraints.hh  fem-helmholtz.cc  femscheme.hh  model.hh  vem-helmholtz.cc  vemdirichletconstraints.hh  vemscheme.hh
src/nonlinear-test/: CMakeLists.txt  fem-nonlinear.cc  fem-qlin.cc~  vem-nonlinear.cc  vemscheme.hh
src/nonlinear-test/data/: parameter~  vem-parameter
src/poisson-test/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  dgelliptic.hh  dgrhs.hh  dune-poisson-agglo-DG.cc  femscheme.hh  probleminterface.hh  travel.hh  trivial-agglomeration.cc
src/poisson-test/agglomeration-DG/: CMakeLists.txt  agglo-dg.cc  dgelliptic.hh  dgrhs.hh  dirichletconstraints.hh  femscheme.hh  model.hh  poisson.hh  probleminterface.hh  rhs.hh  (+2 more)
src/quasilinear-fixed-point/: fem-quasilinear-fp.cc  femscheme.hh  quasilinearmodel.hh  vem-quasilinear-fp.cc  vemdirichletconstraints.hh  vemdirichletconstraintsfromnewton.hh  vemelliptic-fp.hh  vemelliptic.hh  vemscheme.hh
src/quasilinear-test/: dirichletconstraints.hh  fem-quasilinear.cc  femscheme.hh  quasilinearmodel.hh  vem-quasilinear.cc  vemdirichletconstraints.hh  vemelliptic.hh  vemscheme.hh
(+151 files in other folders)
